@@ -1,3 +1,8 @@
+Mon Dec 22 09:20:50 2003  Dale Wilson  <wilson_d@ociweb.com>
+
+        * orbsvcs/orbsvcs/Makefile:
+          Add dependancy of FTORB on PortableGroup.
+
 Mon Dec 22 04:58:28 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/orbsvcs/LoadBalancing/LB_LoadManager.cpp:
